tests/NormalTests/paczka1/fuzzy1/39179643.err
Error in line 2: oIF S29 3,8
Error in line 8: A387 A387 99,8
Error in line 9: A387 S29 33,6
Error in line 12: A387 A387 18,4
Error in line 16: rQw A387 52,9
Error in line 23: A387 S120 34,9
Error in line 20: Pgskx4p S29 52,2
Error in line 28: oIF S9 337,0
